# KIDSVT_FRONT

./: .gitmodules
back/: .gitignore  CMakeLists.txt
back/bindings/: bindings.cpp
back/include/: vmach.hpp  vram.hpp  vram_test.hpp
back/res/: test.kids  test1.kids
back/src/: main.cpp  vmach.cpp  vram.cpp  vram_test.cpp
front/: .gitignore  main.py
front/app/tabs/: config_tab.py  report_tab.py  testing_tab.py
front/app/utils/: constants.py
front/app/widgets/: ram_grid.py
